# Polka_ZK

./: .gitignore  DEPLOYMENT_SUMMARY.md  EASIEST_WAY.md  NEXT_STEPS.md  PROJECT_SUMMARY.md  QUICK_DEPLOY.md  QUICK_DEPLOY_NO_DOCKER.md  QUICK_TEST.sh  README.md  SIMPLE_DEPLOY.md  START_HERE.md
backend/: START.md  package-lock.json  package.json
backend/src/: index.js
backend/src/routes/: access.js  file.js  org.js  user.js
backend/src/services/: contractService.js  eventListener.js  proofVerifier.js  storage.js
contract/: BUILD_WORKAROUND.md  DEPLOY_CHECKLIST.md  DEPLOY_WITHOUT_BUILD.md  FIX_RUST.md  deploy.sh  deploy_no_docker.sh  setup_deploy.sh
contract/org_registry/: .gitignore  Cargo.toml  lib.rs
docs/: ARCHITECTURE.md  DEPLOY_ALTERNATIVE.md  DEPLOY_CONTRACT.md  DEPLOY_STEP_BY_STEP.md  DEPLOY_WITHOUT_DOCKER.md  EASIEST_DEPLOY.md  QUICKSTART.md  SETUP.md  SOLIDITY_CONVERSION.md  TESTING_GUIDE.md  WHY_NOT_REMIX.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/circuits/: .gitkeep  verification_key.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/context/: WalletContext.jsx
frontend/src/pages/: CreateBadge.jsx  DownloadFile.jsx  GenerateProof.jsx  JoinOrg.jsx  Landing.jsx  SelectOrg.jsx  VerifyProof.jsx  ViewFiles.jsx
frontend/src/utils/: contract.js  zk.js
zk/: .gitignore  INSTALL_CIRCOM.md  package-lock.json  package.json
zk/circuits/: merkle_membership.circom
zk/scripts/: copyCircuits.js  generateMerkleTree.js  setup.js  testContract.js  testProof.js
